--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.4",
     "core-js": "^3.8.3",
     "echarts": "^5.4.2",
     "postcss-pxtorem": "^6.0.0",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-echarts": "^6.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +21,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/composition-api": "^1.7.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "lib-flexible": "^0.3.2",
